// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassRateIcon renders tooltip 1`] = `
<svg class="MuiSvgIcon-root"
     focusable="false"
     viewbox="0 0 24 24"
     aria-hidden="true"
     data-icon="ArrowDownwardRoundedIcon"
     style="stroke: darkred; stroke-width: 3; color: darkred;"
     title="-4.00%"
>
  <path d="M11 5v11.17l-4.88-4.88c-.39-.39-1.03-.39-1.42 0-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41a.9959.9959 0 00-1.41 0L13 16.17V5c0-.55-.45-1-1-1s-1 .45-1 1z">
  </path>
</svg>
`;

exports[`PassRateIcon shows down arrow for regression 1`] = `
<svg class="MuiSvgIcon-root"
     focusable="false"
     viewbox="0 0 24 24"
     aria-hidden="true"
     data-icon="ArrowDownwardRoundedIcon"
     style="stroke: darkred; stroke-width: 3; color: darkred;"
>
  <path d="M11 5v11.17l-4.88-4.88c-.39-.39-1.03-.39-1.42 0-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41a.9959.9959 0 00-1.41 0L13 16.17V5c0-.55-.45-1-1-1s-1 .45-1 1z">
  </path>
</svg>
`;

exports[`PassRateIcon shows sync icon for nearly no change 1`] = `
<svg class="MuiSvgIcon-root"
     focusable="false"
     viewbox="0 0 24 24"
     aria-hidden="true"
     data-icon="SyncAltRoundedIcon"
     style="color: grey;"
>
  <path d="M21.65 7.65l-2.79-2.79c-.32-.32-.86-.1-.86.35V7H4c-.55 0-1 .45-1 1s.45 1 1 1h14v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7zM2.35 16.35l2.79 2.79c.32.32.86.1.86-.35V17h14c.55 0 1-.45 1-1s-.45-1-1-1H6v-1.79c0-.45-.54-.67-.85-.35l-2.79 2.79c-.2.19-.2.51-.01.7z">
  </path>
</svg>
`;

exports[`PassRateIcon shows up arrow for improvement 1`] = `
<svg class="MuiSvgIcon-root"
     focusable="false"
     viewbox="0 0 24 24"
     aria-hidden="true"
     data-icon="ArrowUpwardRoundedIcon"
     style="stroke: green; stroke-width: 3; color: green;"
>
  <path d="M13 19V7.83l4.88 4.88c.39.39 1.03.39 1.42 0 .39-.39.39-1.02 0-1.41l-6.59-6.59a.9959.9959 0 00-1.41 0l-6.6 6.58c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L11 7.83V19c0 .55.45 1 1 1s1-.45 1-1z">
  </path>
</svg>
`;
